2005-08-20  Yves Combe,,,  <yves@ycombe.net>

	fix GcomprisUser binding (user->login was missing).
	add missing python bindings in admin: get_users_from_group, set_current_user, get_current_user.
	login.py now uses that.
	pythontest check get_current_user
	
	* src/boards/py-gcompris-user.c: (pyGcomprisUserType_getattr):
	* src/boards/py-mod-admin.c: (py_gcompris_get_users_from_group),
	(py_gcompris_set_current_user), (py_gcompris_get_current_user):
	* src/boards/python/login.py:
	* src/boards/python/pythontest.py:
	* src/gcompris/gcompris_db.h:

2005-08-20  Bruno coudoin  <bruno.coudoin@free.fr>

	Now the square number that cause the number entering refusal is
	highlighted

	* boards/sudoku.xml.in:
	* src/boards/python/sudoku.py:

2005-08-20  Yves Combe  <yves@ycombe.net>

	fix login launch.
	test locales in click_on_letter
	add get global (profile but not board dependant)  conf in get_conf

	* src/boards/click_on_letter.c: (start_board), (end_board),
	(save_table), (conf_ok), (config_start), (config_stop):
	* src/gcompris/board_config.c: (check_key),
	(gcompris_close_board_conf), (gcompris_boolean_box),
	(gcompris_combo_box), (gcompris_radio_buttons),
	(gcompris_spin_int), (gcompris_combo_locales),
	(gcompris_change_locale), (gcompris_combo_locales_asset):
	* src/gcompris/gcompris.c: (setup_window):
	* src/gcompris/gcompris_db.c: (gcompris_get_conf):

2005-08-20  Bruno coudoin  <bruno.coudoin@free.fr>


	* boards/sudoku.xml.in: added goal and manual. Thanks for wikipedia.
	* po/POTFILES.in: added missing sudoku
	* src/boards/python/sudoku.py: improved colors
	* boards/boardicons/sudoku.png: created by bruno
	
2005-08-20  Bruno coudoin  <bruno.coudoin@free.fr>

	reviewed by: <delete if not using a buddy>

	* boards/sudoku.xml.in:
	* src/boards/python/sudoku.py:

2005-08-20  Bruno coudoin  <bruno.coudoin@free.fr>

 	- Included art from Nicu for Mister Potato 
	  Nicu Buculei <nicu@nicubunu.ro> gave us it's Mister Potato
	  and released it under GPL.