@@ -1,3 +1,9 @@
+2005-08-21  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* src/boards/python/sudoku.py: Implemented support for non 9x9 sudoku
+	Implemented level management
+	The first level is playable
+	
 2005-08-20  Yves Combe,,,  <yves@ycombe.net>
 
 	fix GcomprisUser binding (user->login was missing).
